cmake_minimum_required(VERSION 3.2)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_CXX_STANDARD 11)
project(${OVERTHROWER_LIBRARY_PREFIX}overthrower)
add_library(${PROJECT_NAME} SHARED platform.h thread_local.h overthrower.h overthrower.cpp)
if(CMAKE_SYSTEM_NAME MATCHES "Darwin")
    set_target_properties(${PROJECT_NAME} PROPERTIES FRAMEWORK TRUE LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/Frameworks")
endif()
find_package(Threads)
target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
if(CMAKE_SYSTEM_NAME MATCHES "Linux" AND OVERTHROWER_WITH_LIBUNWIND)
    include(libunwind.cmake)
    target_compile_definitions(${PROJECT_NAME} PRIVATE -DWITH_LIBUNWIND)
    target_link_libraries(${PROJECT_NAME} dl unwind)
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/googletest")
    add_subdirectory(googletest)
    add_executable(${PROJECT_NAME}_tests platform.h thread_local.h overthrower.h tests.cpp tests.c)
    target_link_libraries(${PROJECT_NAME}_tests gtest_main ${CMAKE_THREAD_LIBS_INIT} dl)
    if(CMAKE_SYSTEM_NAME MATCHES "Darwin")
        set_target_properties(${PROJECT_NAME}_tests PROPERTIES LINK_FLAGS "-Wl,-U,_activateOverthrower -Wl,-U,_deactivateOverthrower -Wl,-U,_pauseOverthrower -Wl,-U,_resumeOverthrower")
    endif()
    add_dependencies(${PROJECT_NAME}_tests ${PROJECT_NAME})
endif()
