project(overthrower)
set(CMAKE_CXX_STANDARD 11)
file(GLOB SOURCE_FILES "*.cpp")
add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES})
if(CMAKE_SYSTEM_NAME MATCHES "Darwin")
    set_target_properties(${PROJECT_NAME} PROPERTIES FRAMEWORK TRUE)
endif()
find_package(Threads)
target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT} dl)
