project(overthrower)
set(CMAKE_CXX_STANDARD 11)
add_library(${PROJECT_NAME} SHARED overthrower.cpp)
if(CMAKE_SYSTEM_NAME MATCHES "Darwin")
    set_target_properties(${PROJECT_NAME} PROPERTIES FRAMEWORK TRUE)
endif()
find_package(Threads)
target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT} dl)

if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/googletest")
    add_executable(${PROJECT_NAME}_tests "tests.cpp")
    target_include_directories(${PROJECT_NAME}_tests PRIVATE "googletest/googletest" "googletest/googlemock" "googletest/googletest/include" "googletest/googlemock/include")
    target_link_libraries(${PROJECT_NAME}_tests ${CMAKE_THREAD_LIBS_INIT})
    if(CMAKE_SYSTEM_NAME MATCHES "Darwin")
        set_target_properties(${PROJECT_NAME}_tests PROPERTIES LINK_FLAGS "-Wl,-U,_activateOverthrower -Wl,-U,_deactivateOverthrower -Wl,-U,_pauseOverthrower -Wl,-U,_resumeOverthrower")
    endif()
endif()
